<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_openFileManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_fileManager" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_chooseFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_file" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_applyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ifDefault" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_iceboxCoolapk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iceboxCoolapk" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adv_usage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/theme_path">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_advAppleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adv_Apply" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_github"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/github_openSource"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_howItWork"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:text="@string/app_howWorking"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_meCoolapk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/coolapk_me"
            android:textAllCaps="false" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\n\n\n" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sb_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>