<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="7sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/warning_vpn" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="7sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_officialStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/officialThemeStore" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_themesTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/miuithemes_tk"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_techruchi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/techruchi_com"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_themeXiaomis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/miui_themes_xiaomis"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_themez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/miui_themez"
        android:textAllCaps="false" />

</LinearLayout>